--- a/MovieReserveSystem/templates/header.html
+++ b/MovieReserveSystem/templates/header.html
@@ -1,31 +1,32 @@
 <header>
   <div class="navbar navbar-dark bg-dark shadow-sm">
     <div class="container d-flex justify-content-between">
-      <a href="#" class="navbar-brand d-flex align-items-center">
+      <a href="/mrs/" class="navbar-brand d-flex align-items-center">
         <strong>Movie Reserve System</strong>
       </a>
 
-
-      <ul class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0">
-        <li><a href="#" class="nav-link px-2 text-secondary">Home</a></li>
+      <ul
+        class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
+      >
+        <li><a href="/mrs/" class="nav-link px-2 text-secondary">Home</a></li>
+        {% if request.user.is_authenticated %}
+          <li><a href="/mrs/reservation_list" class="nav-link px-2 text-secondary">List</a></li>
+        {% endif %}
       </ul>
 
-      <div class="dropdown text-end">
-        <a href="#" class="d-block link-dark text-decoration-none dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
-          <img src="https://github.com/mdo.png" alt="mdo" width="32" height="32" class="rounded-circle">
-        </a>
-        <ul class="dropdown-menu text-small">
-          <li><a class="dropdown-item" href="#">New project...</a></li>
-          <li><a class="dropdown-item" href="#">Settings</a></li>
-          <li><a class="dropdown-item" href="#">Profile</a></li>
-          <li><hr class="dropdown-divider"></li>
-          <li><a class="dropdown-item" href="#">Sign out</a></li>
-        </ul>
+      <div class="col-md-3 text-end">
+      {% if request.user.is_authenticated %}
+          <a type="button" class="btn btn-outline-primary" href="{% url 'logout' %}">
+            Logout
+          </a>
+      {% else %}
+          <a type="button" class="btn btn-outline-primary me-2" href="{% url 'login' %}">
+            Login
+          </a>
+          <a type="button" class="btn btn-primary" href="{% url 'signup' %}">Sign-up</a>
+      {% endif %}
       </div>
-
 
     </div>
   </div>
 </header>
-
-
