--- a/MovieReserveSystem/templates/header.html
+++ b/MovieReserveSystem/templates/header.html
@@ -1,5 +1,5 @@
 <header>
-  <div class="navbar navbar-dark bg-dark shadow-sm">
+  <div class="navbar fixed-top navbar-dark bg-dark shadow-sm">
     <div class="container d-flex justify-content-between">
       <a href="/mrs/" class="navbar-brand d-flex align-items-center">
         <strong>Movie Reserve System</strong>
