--- a/MovieReserveSystem/templates/login.html
+++ b/MovieReserveSystem/templates/login.html
@@ -4,27 +4,32 @@
 
 <div class="container p-5">
   <form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-  
-    <div class="mb-3 row">
-      <label for="input-user-id" class="col-sm-2 col-form-label">User Name</label>
-      <div class="col-sm-10">
-        {{ form.username }}
+    {% csrf_token %} 
+    
+    {% if errors == 'true' %}
+    <div class="card border-danger mb-3" style="max-width: 18rem">
+      <div class="card-body text-danger">
+        <p class="card-text">Username or password is incorrect.</p>
       </div>
     </div>
+    {% endif %}
+
     <div class="mb-3 row">
-      <label for="input-password" class="col-sm-2 col-form-label">Password</label>
-      <div class="col-sm-10">
-        {{ form.password }}
-      </div>
+      <label for="input-user-id" class="col-sm-2 col-form-label"
+        >User Name</label
+      >
+      <div class="col-sm-10">{{ form.username }}</div>
+    </div>
+    <div class="mb-3 row">
+      <label for="input-password" class="col-sm-2 col-form-label"
+        >Password</label
+      >
+      <div class="col-sm-10">{{ form.password }}</div>
     </div>
 
     <div class="d-flex justify-content-end mt-5">
-
       <button type="submit" class="btn btn-primary">Login</button>
     </div>
-  
-  
   </form>
 </div>
 
