--- a/MovieReserveSystem/templates/movies.html
+++ b/MovieReserveSystem/templates/movies.html
@@ -2,11 +2,10 @@
 
 {% block body %}
     <h3 class="mt-5">Now Playing</h3>
-    <div class="row row-cols-1 row-cols-md-4 g-4">
+    <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
         {% for movie in movies %}
-        
             <div class="col">
-                <div class="card" >
+                <div class="card">
                     <a href="{% url 'datas' %}?movie_id={{movie.id}}" class="btn p-0">
                         <img src={{movie.thumbnail.url}} class="card-img-top" >
     
