--- a/MovieReserveSystem/templates/reservation_list.html
+++ b/MovieReserveSystem/templates/reservation_list.html
@@ -1,25 +1,49 @@
 {% extends "base.html" %}
 
 {% block body %}
-    <h3 class="mt-3">My Reservation</h3>
-    <div class="row">
-        {% for reservation in reservations %}
-            <div class="card p-0 col-5 m-5">
-                <div class="row g-0">
-                    <div class="col-3">
-                        <img src="{{reservation.schedule.movie.thumbnail.url}}" style="max-height: 140px;" class="img-fluid rounded-start" alt="...">
-                    </div>
-                    <div class="col-9">
-                        <div class="card-body">
-                        <h5 class="card-title">{{reservation.schedule.movie}}</h5>
-                        <p class="card-text">start at: {{reservation.schedule.start_at}}</p>
-                        <p class="card-text">seat number: {{reservation}}</p>
-                        </div>
-                    </div>
-                </div>
+<h3 class="mt-5">My Reservation</h3>
+
+{% for reservation in reservations %}
+    <div class="card px-0 mb-5">
+        <div class="d-flex">
+            <img src="{{reservation.schedule.movie.thumbnail.url}}" width="110px">
+            <div class="card-body">
+                <h5 class="card-title">{{reservation.schedule.movie}}</h5>
+                <p class="card-text">
+                    <strong>Start At</strong>: {{reservation.schedule.start_at}}</br>
+                    <strong>Screen Time</strong>: {{reservation.schedule.movie.screen_time}} min</br>
+                    <strong>Seat Number</strong>: {{reservation}}
+                </p>
             </div>
-        {% endfor %}
+            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#exampleModal" onclick="deleteReservation(this)">
+                <input type="hidden" value="{% url 'delete_reservation' %}?reservation_id={{reservation.id}}">
+                <input type="hidden" value="{{reservation.schedule.start_at}}</br>{{reservation.schedule.movie.screen_time}} min</br>{{reservation}}">
+                Delete
+            </button>
+        </div>
     </div>
+{% endfor %}
+
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+<div class="modal-dialog">
+    <div class="modal-content">
+        <div class="modal-header">
+            <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div id="modal-text" class="modal-body">
+            予約を削除します。
+            よろしいですか。
+        </div>
+        <div class="modal-footer">
+            <a id="delete-button" href="" class="btn btn-danger ">Delete</a>
+        </div>
+    </div>
+</div>
+</div>
+
 
 
     {% if toast is True %}
