--- a/MovieReserveSystem/templates/signup.html
+++ b/MovieReserveSystem/templates/signup.html
@@ -2,46 +2,17 @@
 
 <h3 class="mt-5">Sign Up</h3>
 
-<!-- <div class="d-flex justify-content-center p-5 mt-5">
-  <div class="card">
-    <div class="card-body">
-      <h5 class="card-title">Sign Up</h5>
-      <p class="card-text">
-        <form method="post" action="{% url 'signup' %}">
-          {% csrf_token %}
-    
-          <div class="mb-3 row">
-            <label for="input-user-id" class="col-sm-4 col-form-label">User Name</label>
-            <div class="col-sm-8">
-              {{ form.username }}
-            </div>
-          </div>
-          <div class="mb-3 row">
-            <label for="input-password" class="col-sm-4 col-form-label">Password</label>
-            <div class="col-sm-8">
-              {{ form.password }}
-            </div>
-          </div>
-          <div class="mb-3 row">
-            <label for="input-email" class="col-sm-4 col-form-label">E-mail</label>
-            <div class="col-sm-8">
-              {{ form.email }}
-            </div>
-          </div>
-    
-          <div class="d-flex justify-content-end mt-5">
-              <button type="submit" class="btn btn-primary">Sign Up</button>
-          </div>
-        </form>
-      </p>
-    </div>
-  </div>
-</div> -->
-
-
 <div class="container p-5">
     <form method="post" action="{% url 'signup' %}">
       {% csrf_token %}
+
+      {% if errors == 'true' %}
+      <div class="card border-danger mb-3" style="max-width: 18rem">
+        <div class="card-body text-danger">
+          <p class="card-text">ユーザー登録に失敗しました。</p>
+        </div>
+      </div>
+      {% endif %}
 
       <div class="mb-3 row">
         <label for="input-user-id" class="col-sm-2 col-form-label">User Name</label>
