--- a/MovieReserveSystem/templates/base.html
+++ b/MovieReserveSystem/templates/base.html
@@ -11,13 +11,13 @@
       crossorigin="anonymous"
     />
     {% load static %}
-    <link rel="stylesheet" href="{% static 'css/base.css' %}">
+    <link rel="stylesheet" href="{% static 'css/base.css' %}" />
     {% block link %} {% endblock %}
   </head>
   <body>
     {% include "header.html" %}
-    <div class="base-content" styles="padding-top: 60px;">
-      <div class="container" top="20px">{% block body %} {% endblock %}</div>
+    <div class="base-content" >
+      <main >{% block body %} {% endblock %}</main>
     </div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
