--- a/MovieReserveSystem/templates/header.html
+++ b/MovieReserveSystem/templates/header.html
@@ -1,32 +1,27 @@
 <header>
   <div class="navbar fixed-top navbar-dark bg-dark shadow-sm">
     <div class="container d-flex justify-content-between">
-      <a href="/mrs/" class="navbar-brand d-flex align-items-center">
+      <a href="/" class="navbar-brand d-flex align-items-center">
         <strong>Movie Reserve System</strong>
       </a>
 
-      <ul
-        class="nav col-12 col-lg-auto me-lg-auto mb-2 justify-content-center mb-md-0"
-      >
-        <li><a href="/mrs/" class="nav-link px-2 text-secondary">Home</a></li>
+      <ul class="nav justify-content-center text-start">
+        <li><a href="/" class="nav-link px-2 text-light">Home</a></li>
         {% if request.user.is_authenticated %}
-          <li><a href="/mrs/reservation_list" class="nav-link px-2 text-secondary">List</a></li>
+        <li>
+          <a href="/reservation_list" class="nav-link px-2 text-light">List</a>
+        </li>
         {% endif %}
       </ul>
 
-      <div class="col-md-3 text-end">
-      {% if request.user.is_authenticated %}
-          <a type="button" class="btn btn-outline-primary" href="{% url 'logout' %}">
-            Logout
-          </a>
-      {% else %}
-          <a type="button" class="btn btn-outline-primary me-2" href="{% url 'login' %}">
-            Login
-          </a>
-          <a type="button" class="btn btn-primary" href="{% url 'signup' %}">Sign-up</a>
-      {% endif %}
+      <div class="col-3 text-end">
+        {% if request.user.is_authenticated %}
+        <a type="button" class="btn btn-outline-light" href="{% url 'logout' %}"> Logout </a>
+        {% else %}
+        <a type="button" class="btn btn-outline-light me-2" href="{% url 'login' %}"> Login </a>
+        <a type="button" class="btn btn-warning" href="{% url 'signup' %}">Sign-up</a>
+        {% endif %}
       </div>
-
     </div>
   </div>
 </header>
