add seat on reservation

--- a/MovieReserveSystem/templates/reservation_list.html
+++ b/MovieReserveSystem/templates/reservation_list.html
@@ -17,7 +17,7 @@
       <td>{{reservation.schedule.movie}}</td>
       <td>{{reservation.schedule.start_at}}</td>
       <td>{{reservation.schedule.movie.screen_time}} min</td>
-      <td>{{reservation}}</td>
+      <td>{{reservation.seat}}</td>
       <td>
         <button
           type="button"
